[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/entity_scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/icon.png" type="Texture" id=2]
[ext_resource path="res://instances/Healthbar.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/circle.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 15 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 21.1368
height = 63.6219

[sub_resource type="CircleShape2D" id=4]
radius = 70.0

[sub_resource type="Animation" id=6]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MeleeDirection/MeleePivot/AttackSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeleeDirection/MeleePivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ -42.0, 42.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeleeDirection/MeleeHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:combo")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=8]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MeleeDirection/MeleePivot/AttackSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeleeDirection/MeleePivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ 42.0, -42.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeleeDirection/MeleeHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:combo")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=9]
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MeleeDirection/MeleePivot/AttackSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeleeDirection/MeleePivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ -25.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeleeDirection/CircularMeleeHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:combo")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Player" type="KinematicBody2D" groups=["entity", "player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )
combo = 1

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
input_pickable = false
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
shape = SubResource( 2 )

[node name="MeleeDirection" type="Position2D" parent="."]

[node name="MeleePivot" type="Position2D" parent="MeleeDirection"]
rotation = 0.733038

[node name="AttackSprite" type="Sprite" parent="MeleeDirection/MeleePivot"]
visible = false
position = Vector2( 54, 0 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="MeleeHitbox" type="Area2D" parent="MeleeDirection"]
position = Vector2( 50, 0 )
collision_layer = 0
collision_mask = 8
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeDirection/MeleeHitbox"]
visible = false
shape = SubResource( 3 )
disabled = true

[node name="CircularMeleeHitbox" type="Area2D" parent="MeleeDirection"]
collision_layer = 0
collision_mask = 8
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeDirection/CircularMeleeHitbox"]
shape = SubResource( 4 )
disabled = true

[node name="DashRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )

[node name="HealthbarControl" parent="." instance=ExtResource( 3 )]
bar_color = Color( 0.0352941, 0.243137, 0.94902, 1 )
bar_critical_color = Color( 0.52549, 0.0509804, 0.364706, 1 )

[node name="PlayerHitAnimator" type="AnimationPlayer" parent="."]
"anims/player hit" = SubResource( 6 )

[node name="MeleeAttackAnimator" type="AnimationPlayer" parent="."]
"anims/melee combo 1" = SubResource( 7 )
"anims/melee combo 2" = SubResource( 8 )
"anims/melee combo 3" = SubResource( 9 )

[connection signal="body_entered" from="MeleeDirection/MeleeHitbox" to="." method="_on_MeleeHitbox_body_entered"]
[connection signal="body_entered" from="MeleeDirection/CircularMeleeHitbox" to="." method="_on_CircularMeleeHitbox_body_entered"]
